# Syndic

./: .depend  .gitignore  .merlin  .travis-ci.sh  .travis.yml  CHANGES.md  Makefile  README.md  Syndic.Atom.html  Syndic.Date.html  Syndic.Opml1.html  Syndic.Rss1.html  Syndic.Rss2.html  Syndic.W3C.html  Syndic.XML.html  Syndic.html  Syndic_atom.Error.html  Syndic_atom.html  Syndic_date.html  Syndic_error.html  Syndic_opml1.Error.html  Syndic_opml1.html  Syndic_rss1.Error.html  Syndic_rss1.html  Syndic_rss2.Error.html  Syndic_rss2.html  Syndic_w3c.Error.html  Syndic_w3c.html  Syndic_xml.html  _oasis  _tags  code_Syndic.Atom.html  code_Syndic.Date.html  code_Syndic.Opml1.html  code_Syndic.Rss1.html  code_Syndic.Rss2.html  code_Syndic.W3C.html  code_Syndic.XML.html  code_Syndic.html  dune-project  (+39 more)
doc/: Atom.Error.html  Atom.html  Common.Error.html  Common.Util.html  Common.XML.html  Common.html  Rss1.Error.html  Rss1.html  Rss2.Error.html  Rss2.html  Syndic.html  html.stamp  index.html  index_attributes.html  index_class_types.html  index_classes.html  index_exceptions.html  index_methods.html  index_module_types.html  index_modules.html  index_types.html  index_values.html  type_Atom.Error.html  type_Atom.html  type_Common.Error.html  type_Common.Util.html  type_Common.XML.html  type_Common.html  type_Rss1.Error.html  type_Rss1.html  type_Rss2.Error.html  type_Rss2.html  type_Syndic.html
examples/: minimal.xml
lib/: Common.Util  META  META.in  Syndic.odocl  atom.ml  atom.mli  common.ml  common.mli  dune  jbuild  rss1.ml  rss1.mli  rss2.ml  rss2.mli  syndic.ml  syndic.mldylib  syndic.mli  syndic.mllib  syndic_atom.ml  syndic_atom.mli  syndic_common.ml  syndic_common.mli  syndic_conf.ml.ab  syndic_date.ml  syndic_date.mli  syndic_error.ml  syndic_error.mli  syndic_opml1.ml  syndic_opml1.mli  syndic_rss1.ml  syndic_rss1.mli  syndic_rss2.ml  syndic_rss2.mli  syndic_w3c.ml  syndic_w3c.mli  syndic_xml.ml  syndic_xml.mli
lib/calendar/: syndic_date.ml  syndic_date.mli
lib/conf/: conf.ml
lib/ptime/: syndic_date.ml
opam/: opam
src/: META  main.ml  syndic.ml  syndic.mli  syndic.mllib
syndic/: index.html
syndic/Syndic/: index.html
syndic/Syndic__/: index.html
syndic/Syndic__/Syndic_atom/: index.html
syndic/Syndic__/Syndic_common/: index.html
syndic/Syndic__/Syndic_conf/: index.html
syndic/Syndic__/Syndic_date/: index.html
syndic/Syndic__/Syndic_error/: index.html
syndic/Syndic__/Syndic_opml1/: index.html
syndic/Syndic__/Syndic_rss1/: index.html
syndic/Syndic__/Syndic_rss2/: index.html
syndic/Syndic__Syndic_atom/: index.html
syndic/Syndic__Syndic_common/: index.html
syndic/Syndic__Syndic_conf/: index.html
syndic/Syndic__Syndic_date/: index.html
syndic/Syndic__Syndic_error/: index.html
syndic/Syndic__Syndic_opml1/: index.html
syndic/Syndic__Syndic_rss1/: index.html
syndic/Syndic__Syndic_rss2/: index.html
syndic/Syndic__Syndic_w3c/: index.html
syndic/Syndic__Syndic_xml/: index.html
test/: 001.feed  002.feed  003.feed  004.feed  005.feed  006.feed  downloader.ml  dune  dune.inc  feeds.json  generate.ml  jbuild  test.ml  test_decisions.ml
(+16 files in other folders)
