opam-version: "1.2"
name:         "syndic"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      [ "Romain Calascibetta"
                "Christophe Troestler" ]
license:      "MIT"
homepage:     "https://github.com/Cumulus/Syndic"
dev-repo:     "git+https://github.com/Cumulus/Syndic.git"
bug-reports:  "https://github.com/Cumulus/Syndic/issues"

build: [[ "jbuilder" "build" "--only-packages" name "--root" "." "-j" jobs "@install" ]]

depends: [
  "jbuilder"
  "ptime"
  "uri" {>= "1.9"}
  "xmlm" {>= "1.2.0"}
  "cohttp" {test & >= "1.0.0"}
  "lwt"    {test}
  "ssl"    {test}
  "tls"    {test}
]

available: [ocaml-version >= "4.01.0"]
