(executable
 (name test)
 (modules test)
 (libraries syndic jsonm fpath fmt ocplib-json-typed unix))

(include dune.inc)

(rule
 (targets dune.inc.gen)
 (deps (:gen generate.ml) (:feeds feeds.json))
 (action (run %{ocaml} %{gen} --json %{feeds} --output %{targets})))

(alias
 (name runtest)
 (action (diff dune.inc dune.inc.gen)))